trunk/NewArchive/849f853b508cd17347db21a83f9a11df-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:4: error: ‘QuantidadeSalarios’ does not name a type
    QuantidadeSalarios = round((pessoas[i].rendaMensal)/SalarioMinimo);
    ^
main.cpp:4:5: error: expected unqualified-id before ‘if’
     if(QuantidadeSalarios < 2){
     ^
main.cpp:6:6: error: expected unqualified-id before ‘else’
     }else if((QuantidadeSalarios > 2) && (QuantidadeSalarios < 3)){
      ^
main.cpp:8:6: error: expected unqualified-id before ‘else’
     }else if((QuantidadeSalarios > 3) && (QuantidadeSalarios < 5)){
      ^
main.cpp:10:6: error: expected unqualified-id before ‘else’
     }else if((QuantidadeSalarios > 5) && (QuantidadeSalarios < 7)){
      ^
main.cpp:12:6: error: expected unqualified-id before ‘else’
     }else if(QuantidadeSalarios > 7){
      ^
main.cpp:15:5: error: ‘pessoas’ does not name a type
     pessoas[i].RendaFinal -= ((((1 - pessoas[i].Ndependentes*0.05))*pessoas[i].RendaFinal));
     ^
